<resources>
    <string name="app_name">Smart नारी </string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="my_circle">My Circle</string>
    <string name="about_smart_naari">About Smart नारी</string>
    <string name="meet_the_board">Meet The Team</string>
    <string name="sn_enthusiasts">Acknowledging Friends</string>
    <string name="celebrating_professionals">Celebrating Professionals</string>
    <string name="glossary_of_terms">Glossary</string>
    <string name="data_on_gender_based_violence">Data on Gender and GBV</string>
    <string name="tutorials">Tutorials</string>
    <string name="privacy_policy_and_data_protection">Privacy Policy and Terms</string>
    <string name="copyright">Copyright</string>
    <string name="donate">Donate</string>
    <string name="enter_at_least_two_phone_numbers">Enter at least TWO Phone Numbers</string>
    <string name="title_activity_ma_sakcham_chu_coach">MaSakchamChuCoachActivity</string>
    <string name="be_the_one_to_say_no_to_gender_based_violence">Be the one to say NO to Gender Based Violence </string>
    <string name="string_terms_and_condition">By Signing up, you are indicating that you agree to the Privacy Policy and Terms.</string>
    <string name="life_coaching">Life Coaching</string>
    <string name="life_coaching_detail">\"I was trilled when a few years ago i was selected to take part in an exciting and lively online life coaching course. I am a practical person who is not given to exaggeration, so beleive me when i state that the results of Life Coaching are profound and lasting.\"</string>
    <string name="take_a_test_here">Take a Test here</string>
    <string name="free_online_course">Free Online Course</string>
    <string name="i_am_amazing_detail">Smart नारी presents ordinary Nepali Nepali folks who grew up under some kind of heavy boots and whom may not make it into the history books, but they have a story to tell and we beleive these stories must be heard</string>
    <string name="person_of_the_month_detail">Smart नारी presents ordinary Nepali Nepali folks who grew up under some kind of heavy boots and whom may not make it into the history books, but they have a story to tell and we beleive these stories must be heard</string>
    <string name="person_of_the_month">Person of the Month</string>
    <string name="i_am_amazing_pheonix">image of phoenix flapping wings</string>
    <string name="i_am_amazing_click_to_look">click to Look for more Nepali Society</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyCO207LmdkysjApEtK5mEEBLlpAjWsNMaU</string>
    <string name="title_activity_yuwa_pust">YuwaPustActivity</string>
    <string name="yuwa_pusta_heading">\"Owl\" at your disposal, about LIFE,\n LOVE, and yes even SEX and\n SEXUALITY, CONTRACEPTION,\nSTIGMA, TABOOS and much more.</string>
    <string name="question">What can i know about drugs?</string>
    <string name="answer">28 year old mother replies. \K bhaneko testo? Testo Bhannu hudaina! Chii!!\n Hey Bhagwan, how embarrassing!!</string>
    <string name="btn_ask_an_owl">Ask an Owl</string>
    <string name="select_an_owl">Select an Owl</string>
    <string name="general_form_hint_question">Write your question here</string>
    <string name="general_form_button_ask">Ask</string>
    <string name="title_activity_ask_owl">AskOwlActivity</string>
    <string name="understanding">Understand</string>
    <string name="report_gender_based_violence">Report Violence, Abuse and Harm</string>
    <string name="report_i_am_the_victim">Myself</string>
    <string name="report_family_members">Family Members</string>
    <string name="report_other">Others</string>
    <string name="when_did_the_voilence_occur">When did the voilence occur</string>
    <string name="types_of_voilence">Type</string>
    <string name="core_gvb">Core GVB</string>
    <string name="perpetrator">Perpetrator</string>
    <string name="desc_GBV_ma_chup_basdina">Other Information</string>
    <string name="anger_management">Anger Management</string>
    <string name="life_coaching_ma_sakcham_chu_detail">Description (Further details of the Reported GBV)</string>
    <string name="anger_management_ma_sakcham_chu_detail">Description (Further details of the Reported GBV)</string>
    <string name="lets_have_the_talk">Lets Have the TALK</string>
    <string name="headline_mycircle1">My Circle</string>
    <string name="headline_mycircle2">For my Safety</string>
    <string name="general_btn_form_submission">Ask an Owl</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Unexpected Error Occured.</string>
    <string name="dialog_error_title_sync_failed">Data Sync Failed (Code: %1$s)</string>
    <string name="dialog_title_warning_logout">Proceed with caution.</string>
    <string name="dialog_warning_logout">Logout will result in deletion of all your saved forms.Consider uploading them before proceeding.</string>
    <string name="dialog_warning_logout_pos">Yes, Delete my forms and logout</string>
    <string name="dialog_warning_logout_neg">No, I don\'t want to logout</string>
    <string name="dialog_title_error_register">Error Registering.</string>
    <string name="dialog_error_register">Could not register to sever.\n • Try again in a few minutes \n • If error persists contact Web Admin.</string>
    <string name="dialog_action_hide">Hide</string>
    <string name="district_of_incident">District Of Incident</string>
    <string name="app_exit_msg">Tap Again to Exit!</string>
    <string name="general_error_msg">Some Error Occurred!</string>
    <string name="network_error_timeout">Socket Time out. Please try again.</string>
    <string name="network_disconnected">Device is offline!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_circle">My Circle</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_permission">PermissionActivity</string>
    <string name="location_provider_accuracy"><![CDATA[>Using %1$s. Accuracy is %2$s m]]></string>
    <string name="awantika_thapa">Awantika Thapa</string>
    <string name="krishangi_basnyat">Krishangi Basnyat</string>
    <string name="madhuri_rana_singh">Madhuri Rana Singh</string>
</resources>