<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nepal.naxa.smartnaari.friendsofsmartnaari.FriendsOfSmartNaariActivity">

    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_layout_header">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvAwantika"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/default_padding"
                android:text="@string/awantika_thapa"
                android:textSize="@dimen/material_text_subhead"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvKrishangi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/default_padding"
                android:text="@string/krishangi_basnyat"
                android:textSize="@dimen/material_text_subhead"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvMadhuri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/default_padding"
                android:text="@string/madhuri_rana_singh"
                android:textSize="@dimen/material_text_subhead"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvPoonam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:padding="@dimen/default_padding"
                android:text="Poonam Thapa"
                android:textSize="@dimen/material_text_subhead"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
