<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_high"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"

            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_activity_sakshyamchu"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/imageBackgroundGrey"
                android:foregroundGravity="center"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/grid_ma_saksam_chu" />

            <ImageView
                android:id="@+id/iv_main_activity_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_xlarge"
                android:paddingTop="@dimen/spacing_xlarge"
                android:src="@drawable/ic_ma_sakshyam_chu_motto" />


            <LinearLayout
                android:padding="@dimen/spacing_large"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/spacing_large"
                    android:text="@string/life_coaching"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_xlarge"
                    android:paddingRight="@dimen/spacing_xlarge"
                    android:text="@string/anger_management_ma_sakcham_chu_detail"
                    android:textColor="@color/colorGray" />



                <TextView
                    android:id="@+id/tvLifeCoachingDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/spacing_xlarge"
                    android:text="@string/life_coaching_detail"
                    android:textColor="@color/colorGray"
                    android:textStyle="italic" />
            </LinearLayout>


            <Button
                android:id="@+id/bt_main_activity_takeatest"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:background="@drawable/button_red_background"
                android:text="Take a Test"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/bt_main_activity_freeonlinecource"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:background="@drawable/button_red_border"
                android:text="Free Online Course "
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>


            <Button
                android:id="@+id/bt_main_activity_bookanappointment"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/button_red_background"
                android:text="Book an Appointment"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
