<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_high"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"

            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:background="@color/imageBackgroundGrey"
                android:padding="@dimen/spacing_large"
                android:src="@drawable/grid_i_am_amazing" />

            <TextView
                android:id="@+id/tvIAmAmazingDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_mlarge"
                android:text="@string/i_am_amazing_detail"
                android:textColor="@color/colorGray"
                android:textStyle="italic" />

            <TextView
                android:layout_width="@dimen/line_size"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_xxlarge"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/person_of_the_month"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/material_text_subhead" />

            <ImageView
                android:id="@+id/ivIAmAmazingPersonOfTheMonth"
                android:layout_width="@dimen/big_icon_size"
                android:layout_height="@dimen/big_icon_size"
                android:layout_gravity="center"
                android:background="@drawable/image_view_person_of_the_month" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expandable_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:animDuration="100"
                app:maxCollapsedLines="4">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/spacing_mlarge"
                    android:textColor="@color/colorGray"
                    android:textStyle="italic" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/spacing_mlarge">


                    <ImageButton
                        android:id="@+id/expand_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:paddingTop="20dp"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Read More >>"
                        android:textColor="@color/colorAccent" />

                </FrameLayout>
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:src="@drawable/pheonix" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/i_am_amazing_click_to_look"
                android:textColor="@color/colorGray"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>